Capturing the start phrase

--- a/index.html
+++ b/index.html
@@ -24,10 +24,19 @@
                     <div id="keyrow2" class="keyrow"></div>
                 </div>
             </div>
-            <div id="lower">Lower
-
+            <div id="lower">
+                <div id="startbox">
+                    <form>
+                        Enter a word or phrase.<br>
+                        <input type="text" id="myPhrase" value="">
+                    </form>
+                </div>
+                <div id="controls">
+                    <button id="startbtn" name="Start">Start</button>
+                </div>
             </div>
         </div>
+
     </main>
 
     <script src="js/game.js" type="text/javascript"></script>
