Simplified lower box, organized functions

--- a/index.html
+++ b/index.html
@@ -24,17 +24,15 @@
                     <div id="keyrow2" class="keyrow"></div>
                 </div>
             </div>
-            <div id="lower">
-                <div id="startbox">
-                    <form>
-                        Enter a word or phrase.<br>
-                        <input type="text" id="myPhrase" value="">
-                    </form>
-                </div>
-                <div id="controls">
-                    <button id="startbtn" name="Start">Start</button>
-                </div>
+
+            <div id="startbox">
+                <form id="form">
+                    Enter a word or phrase.<br>
+                    <input type="text" id="myPhrase" value="">
+                </form>
+                <button id="startbtn" name="Start">Start</button>
             </div>
+
         </div>
 
     </main>
