--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
                 </div>
             </div>
 
-            <div id="startbox">
-                <form id="form">
-                    Enter a word or phrase.<br>
-                    <input type="text" id="myPhrase" value="">
-                </form>
+            <div id="startbox">Enter a word or phrase.
+                <input type="text" id="myPhrase" value="">
                 <button id="startbtn" name="Start">Start</button>
             </div>
 
