--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 </div>
             </div>
 
-            <div id="startbox">Enter a word or phrase.
+            <div id="startbox">
+                <div id="instruction">Enter a word or phrase.</div>
                 <input type="text" id="myPhrase" value="">
                 <button id="startbtn" name="Start">Start</button>
             </div>
